src/human_study/program_16/python_err_msg.txt
File "./seq2parse/human_study/program_16/original.py", line 6
    print(anos"anos")
              ^^^^^^
SyntaxError: invalid syntax
